--- a/history.html
+++ b/history.html
@@ -12,12 +12,12 @@
 <body>
     <header>
         <nav>
-            <a href="/index.html"><img
+           <a href="/Vynnuku/index.html"><img
                     src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/15/Coat_of_Arms_of_Vynnyky%2C_Lviv_Oblast.svg/135px-Coat_of_Arms_of_Vynnyky%2C_Lviv_Oblast.svg.png"
                     width="40px"></a>
-            <a href="/index.html">Головна</a>
-            <a href="/history.html">Історія</a>
-            <a href="/location.html">Як до нас дістатися?</a>
+            <a href="/Vynnuku/index.html">Головна</a>
+            <a href="/Vynnuku/history.html">Історія</a>
+            <a href="/Vynnuku/location.html">Як до нас дістатися?</a>
         </nav>
     </header>
 
